Potensh fix for input bg on IE & Edge

--- a/app/styles/framework/elements/_forms.scss
+++ b/app/styles/framework/elements/_forms.scss
@@ -42,8 +42,7 @@
 }
 
 ::-ms-value {
-    @include input;
-    background-color: inherit;
+    background-color: transparent;
 }
 
 ::-ms-browse {
